--- a/src/app/basedata/basedata.page.html
+++ b/src/app/basedata/basedata.page.html
@@ -73,7 +73,7 @@
           </ion-card-header>
           <ion-card-content class="ion-card-content">
             <a></a>
-            <font style="font-size: 10px; margin-left:10%;">basedata/bank</font>
+            <font style="font-size: 10px; margin-left:10%;">ด้านข้อมูลธนาคารที่เปิดบัญชี</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
