--- a/src/app/expert-type/expert-type.page.html
+++ b/src/app/expert-type/expert-type.page.html
@@ -8,5 +8,66 @@
 </ion-header>
 
 <ion-content>
+  <ion-list>
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>วิทยากรบรรยาย</ion-label>
+        <ion-toggle checked color="success"></ion-toggle>
+      </ion-item>
 
+      <ion-item-options side="end">
+        <ion-item-option color="danger"(click)="unread(item)"><ion-icon name="trash"></ion-icon></ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+    
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>วิทยากรพี่เลี้ยง</ion-label>
+        <ion-toggle checked color="success"></ion-toggle>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option color="danger"(click)="unread(item)"><ion-icon name="trash"></ion-icon></ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>วิทยากรสันทนาการ</ion-label>
+        <ion-toggle disable color="success"></ion-toggle>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option color="danger"(click)="unread(item)"><ion-icon name="trash"></ion-icon></ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+   
+    <ion-item-sliding>
+      <ion-item> 
+        <ion-label>วิทยากรพี่กลุ่ม</ion-label>
+        <ion-toggle disable color="success"></ion-toggle>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option color="danger"(click)="unread(item)"><ion-icon name="trash"></ion-icon></ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+    
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>วิทยากรฝึกอบรม</ion-label>
+        <ion-toggle checked color="success"></ion-toggle>
+      </ion-item>
+
+      <ion-item-options side="end">
+        <ion-item-option color="danger"(click)="unread(item)"><ion-icon name="trash"></ion-icon></ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+
+  </ion-list>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+     <ion-fab-button>
+      <ion-icon name="add" [routerLink]="['/basedata/expert-type/expert-type-insert']" routerLinkActive="router-link-active" ></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
