--- a/src/app/food-type/food-type.page.html
+++ b/src/app/food-type/food-type.page.html
@@ -8,5 +8,43 @@
 </ion-header>
 
 <ion-content>
+  <ion-item-sliding>
+    <ion-item>
+      <ion-label>อาหารมังสวิรัติ</ion-label>
+      <ion-toggle color="success" checked></ion-toggle>
+     
+    </ion-item>
 
+    <ion-item-options side="end"  >
+      <ion-item-option (click)="unread(item)" color="danger" ><ion-icon name="trash"></ion-icon></ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
+  <ion-item-sliding>
+    <ion-item>
+      <ion-label>อาหารคลีน</ion-label>
+      <ion-toggle color="success" checked></ion-toggle>
+     
+    </ion-item>
+
+    <ion-item-options side="end"  >
+      <ion-item-option (click)="unread(item)" color="danger" ><ion-icon name="trash"></ion-icon></ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
+  <ion-item-sliding>
+    <ion-item>
+      <ion-label>อาหารปกติ</ion-label>
+      <ion-toggle color="success" checked></ion-toggle>
+     
+    </ion-item>
+
+    <ion-item-options side="end"  >
+      <ion-item-option (click)="unread(item)" color="danger" ><ion-icon name="trash"></ion-icon></ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
+  
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" [routerLink]="['/basedata/food-type/food-insert']">
+    <ion-fab-button>
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
