--- a/src/app/expert-in/expert-in.page.html
+++ b/src/app/expert-in/expert-in.page.html
@@ -1,9 +1,72 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>expert_in</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref="/"></ion-back-button>
+        </ion-buttons>
+        <ion-title>expert-in</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
+
+    <!-- Toggles in a List -->
+    <ion-list>
+
+
+        <ion-item-sliding>
+            <ion-item>
+                <ion-label>นาย ยุทธ์ แสงโสม</ion-label>
+                <ion-toggle color="success" checked></ion-toggle>
+
+            </ion-item>
+
+            <ion-item-options side="end">
+                <ion-item-option (click)="unread(item)" color="danger">
+                    <ion-icon name="trash"></ion-icon>
+                </ion-item-option>
+            </ion-item-options>
+        </ion-item-sliding>
+
+        <ion-item-sliding>
+            <ion-item>
+                <ion-label>นายโอ พ่อใหญ่</ion-label>
+                <ion-toggle color="success" [(ngModel)]="status1"> </ion-toggle>
+
+            </ion-item>
+
+            <ion-item-options side="end">
+                <ion-item-option (click)="unread(item)" color="danger">
+                    <ion-icon name="trash"></ion-icon>
+                </ion-item-option>
+            </ion-item-options>
+        </ion-item-sliding>
+        <ion-item-sliding>
+            <ion-item>
+                <ion-label>นาย แดง ไอเหี้ยม</ion-label>
+                <ion-toggle color="success" [(ngModel)]="status2" checked> </ion-toggle>
+
+            </ion-item>
+
+            <ion-item-options side="end">
+                <ion-item-option (click)="unread(item)" color="danger">
+                    <ion-icon name="trash"></ion-icon>
+                </ion-item-option>
+            </ion-item-options>
+        </ion-item-sliding>
+
+
+
+
+
+
+
+
+    </ion-list>
+
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed" [routerLink]="['/expert-in-insert']">
+        <ion-fab-button>
+            <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+    </ion-fab>
 </ion-content>
