expert-out-insert

--- a/src/app/expert/expert.page.html
+++ b/src/app/expert/expert.page.html
@@ -8,5 +8,30 @@
 </ion-header>
 
 <ion-content>
-
+  <div>
+    <ion-col>
+      <ion-card class="card" [routerLink]="['/expert/expert-in']">
+        <ion-card-header>
+          <ion-card-title>
+            <ion-icon size="large" ios="ios-document" md="md-document"></ion-icon>
+          </ion-card-title>
+        </ion-card-header>
+        <ion-card-content class="ion-card-content">
+          <font style="font-size: 10px; margin-left:10%;">วิทยากรภายใน</font>
+        </ion-card-content>
+      </ion-card>
+    </ion-col>
+    <ion-col>
+      <ion-card class="card" [routerLink]="['/expert/expert-out']">
+        <ion-card-header>
+          <ion-card-title>
+            <ion-icon size="large" ios="ios-document" md="md-document"></ion-icon>
+          </ion-card-title>
+        </ion-card-header>
+        <ion-card-content class="ion-card-content">
+          <font style="font-size: 10px; margin-left:10%;">วิทยากรภายนอก</font>
+        </ion-card-content>
+      </ion-card>
+    </ion-col>
+  </div>
 </ion-content>
