--- a/src/app/expert-out/expert-out.page.html
+++ b/src/app/expert-out/expert-out.page.html
@@ -1,9 +1,49 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
     <ion-title>expert_out</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-list>
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>นาย นพดล จันทร์สุข</ion-label>
+        <ion-toggle [(ngModel)]="st1" color="success"></ion-toggle>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option (click)="unread(item)" color="danger"><ion-icon name="trash"></ion-icon></ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
 
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>นาย สรรค์ปกรณ์ สุทธิรัตนพร</ion-label>
+        <ion-toggle [(ngModel)]="st2" color="success"></ion-toggle>
+      </ion-item>
+      <ion-item-options side="end">
+          <ion-item-option (click)="unread(item)" color="danger"><ion-icon name="trash"></ion-icon></ion-item-option>
+        </ion-item-options>
+    </ion-item-sliding>
+    
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>นาย ชนาธิป คมคาย</ion-label>
+        <ion-toggle [(ngModel)]="st3" color="success" checked></ion-toggle>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option (click)="unread(item)" color="danger"><ion-icon name="trash"></ion-icon></ion-item-option>
+      </ion-item-options>
+
+    </ion-item-sliding>
+  </ion-list>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" [routerLink]="['/expert/expert-out-insert']">
+      <ion-fab-button>
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
 </ion-content>
