--- a/src/app/develops/develops.page.html
+++ b/src/app/develops/develops.page.html
@@ -3,10 +3,52 @@
       <ion-buttons slot="start">
           <ion-back-button defaultHref="/"></ion-back-button>
         </ion-buttons>
-    <ion-title>develops</ion-title>
+    <ion-title>ด้านการพัฒนา</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+
+  <ion-item-sliding>
+    <ion-item>
+      <ion-label>การบริหารการจัดการ</ion-label>
+      <ion-toggle checked color="success"></ion-toggle>
+    </ion-item>
+
+    <ion-item-options side="end">
+      <ion-item-option color="danger" (click)="unread(item)"><ion-icon name="trash" ></ion-icon></ion-item-option>
+    </ion-item-options>
+  </ion-item-sliding>
+
+  <ion-item-sliding>
+  <ion-item>
+    <ion-label>วิชาการ</ion-label>
+    <ion-toggle  checked color="success"></ion-toggle>
+  </ion-item>
+
+  <ion-item-options side="end">
+    <ion-item-option color="danger" (click)="unread(item)"><ion-icon name="trash" ></ion-icon></ion-item-option>
+  </ion-item-options>
+</ion-item-sliding>
+
+<ion-item-sliding>
+<ion-item>
+  <ion-label>วิชาชีพเฉพาะสาขา</ion-label>
+  <ion-toggle  color="success"></ion-toggle>
+</ion-item>
+
+<ion-item-options side="end">
+  <ion-item-option color="danger" (click)="unread(item)"><ion-icon name="trash" ></ion-icon></ion-item-option>
+</ion-item-options>
+</ion-item-sliding>
+
+
+  <ion-fab [routerLink]="['/develops-insert']" vertical="bottom" horizontal="end" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="add" ></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
 
 </ion-content>
