modified name expert-in and out
Signed-off-by: bavza01 <bave12342@gmail.com>

--- a/src/app/expert/expert.page.html
+++ b/src/app/expert/expert.page.html
@@ -17,7 +17,7 @@
           </ion-card-title>
         </ion-card-header>
         <ion-card-content class="ion-card-content">
-          <font style="font-size: 10px; margin-left:10%;">????????????</font>
+          <font style="font-size: 10px; margin-left:10%;">วิทยากรภายใน</font>
         </ion-card-content>
       </ion-card>
     </ion-col>
@@ -29,9 +29,9 @@
           </ion-card-title>
         </ion-card-header>
         <ion-card-content class="ion-card-content">
-          <font style="font-size: 10px; margin-left:10%;">?????????????</font>
+          <font style="font-size: 10px; margin-left:10%;">วิทยากรภายนอก</font>
         </ion-card-content>
       </ion-card>
     </ion-col>
-  </div>    </ion-row>
+  </div>    
 </ion-content>
