bank-insert.page.html add function to back page bank-insert.page.ts add function allow to back page bank.page.html modify text that not correctly basedata.page.html modify name of basedata/bank
Signed-off-by: niphitphon8bit <niphitphon_nt@hotmail.com>

--- a/src/app/bank-insert/bank-insert.page.html
+++ b/src/app/bank-insert/bank-insert.page.html
@@ -29,5 +29,5 @@
   </ion-item>
 
   <br>
-  <ion-button expand="block" color="success">บันทึก</ion-button>
+  <ion-button expand="block" color="success" (click)="insert_bank()" >บันทึก</ion-button>
 </ion-content>
