add new basedata skill add new skill skill-insert modify app-routing.module.ts add skill route modify basedata/basedata.page.html add skill route
Signed-off-by: niphitphon8bit <niphitphon_nt@hotmail.com>

--- a/src/app/basedata/basedata.page.html
+++ b/src/app/basedata/basedata.page.html
@@ -91,5 +91,20 @@
         </ion-card>
       </ion-col>
     </ion-row>
+    <ion-row responsive-sm>
+      <ion-col>
+        <ion-card class="card" [routerLink]="['/basedata/skill']" routerLinkActive="router-link-active">
+          <ion-card-header>
+            <ion-card-title>
+              <ion-icon size="large" ios="ios-person" md="md-person"></ion-icon>
+            </ion-card-title>
+          </ion-card-header>
+          <ion-card-content class="ion-card-content">
+            <a></a>
+            <font style="font-size: 10px; margin-left:10%;">ทักษะ</font>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
   </div>
 </ion-content>
