delete expert type
Signed-off-by: Thutsaneeya chanrong <60160194@go.buu.ac.th>

--- a/src/app/expert-type-insert/expert-type-insert.page.html
+++ b/src/app/expert-type-insert/expert-type-insert.page.html
@@ -24,7 +24,9 @@
     </ion-list>
 
     <div class="ion-padding">
-      <ion-button expand="block" type="submit" class="ion-no-margin">บันทึก</ion-button>
+      <ion-button expand="block" type="submit" class="ion-no-margin" (click)="insert_expert_type()">บันทึก</ion-button>
     </div>
   </form>
+ 
 </ion-content>
+
