--- a/src/app/expert-type-insert/expert-type-insert.page.html
+++ b/src/app/expert-type-insert/expert-type-insert.page.html
@@ -24,7 +24,7 @@
     </ion-list>
 
     <div class="ion-padding">
-      <ion-button expand="block" type="submit" class="ion-no-margin" (click)="insert_expert_type()">บันทึก</ion-button>
+      <ion-button color = "success"expand="block" type="submit" class="ion-no-margin" (click)="insert_expert_type()">บันทึก</ion-button>
     </div>
   </form>
  
