Create a delete_function and insert_function

--- a/src/app/major-insert/major-insert.page.html
+++ b/src/app/major-insert/major-insert.page.html
@@ -31,7 +31,9 @@
     </ion-item>
 
 <br>
-    <ion-button expand="full" color="success" >บันทึก</ion-button>
-    
+  <!-- <div class="ion-padding">
+    <ion-button expand="block" type="submit" class="ion-no-margin" (click)="major_insert()">บันทึก</ion-button>
+  </div> -->
+  <ion-button expand="block" type="submit" (click)="major_insert()" >บันทึก</ion-button>
 </ion-content>
 
