--- a/src/app/major/major.page.html
+++ b/src/app/major/major.page.html
@@ -9,14 +9,13 @@
 
 <ion-content>
 
-  <ion-item-sliding>
-
+  <!-- <ion-item-sliding>
     <ion-item>
       <ion-label>สาขาวิชา</ion-label>
       <ion-toggle color="success" checked></ion-toggle>
     </ion-item>
     <ion-item-options side="end">
-      <ion-item-option color="danger" (click)="unread(item)"><ion-icon name="trash" ></ion-icon></ion-item-option>
+      <ion-item-option color="danger" (click)="remove_major(skill)"><ion-icon name="trash" ></ion-icon></ion-item-option>
     </ion-item-options>
   </ion-item-sliding>
 
@@ -26,7 +25,7 @@
     <ion-toggle color="success"></ion-toggle>
   </ion-item>
   <ion-item-options side="end">
-    <ion-item-option color="danger" (click)="unread(item)"><ion-icon name="trash"></ion-icon></ion-item-option>
+    <ion-item-option color="danger" (click)="remove_major(skill)"><ion-icon name="trash"></ion-icon></ion-item-option>
   </ion-item-options>
 </ion-item-sliding>
 
@@ -36,10 +35,22 @@
   <ion-toggle color="success"></ion-toggle>
 </ion-item>
 <ion-item-options side="end">
-  <ion-item-option color="danger" (click)="unread(item)"><ion-icon name="trash"></ion-icon></ion-item-option>
+  <ion-item-option color="danger" (click)="remove_major(skill)"><ion-icon name="trash"></ion-icon></ion-item-option>
 </ion-item-options>
-</ion-item-sliding>
+</ion-item-sliding> -->
 
+<ion-item-sliding *ngFor="let index_major of data_major">
+      <ion-item>
+        <ion-label>{{index_major.title}}</ion-label>
+        <ion-toggle color="success" [(ngModel)]="index_major.status"></ion-toggle>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option (click)="remove_major(index_major)" color="danger">
+          <ion-icon name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+  
 
   <!-- fab placed to the top end -->
   <ion-fab [routerLink]="['/major-insert']" vertical="bottom" horizontal="end" slot="fixed">
