add back page and delete
Signed-off-by: nopnop334 <comcomnop@gmail.com>

--- a/src/app/expert-in-insert/expert-in-insert.page.html
+++ b/src/app/expert-in-insert/expert-in-insert.page.html
@@ -25,7 +25,7 @@
 
 
     <div class="ion-padding">
-        <ion-button expand="block" type="submit" class="ion-no-margin">Create account</ion-button>
+        <ion-button expand="block" type="submit" (click)="insert_expert_in()" class="ion-no-margin">Create account</ion-button>
     </div>
 
 
