--- a/src/app/expert-in/expert-in.page.html
+++ b/src/app/expert-in/expert-in.page.html
@@ -14,49 +14,23 @@
     <ion-list>
 
 
-        <ion-item-sliding>
+
+
+
+
+
+
+        <ion-item-sliding *ngFor="let expert of experts">
             <ion-item>
-                <ion-label>นาย ยุทธ์ แสงโสม</ion-label>
-                <ion-toggle color="success" checked></ion-toggle>
-
+                <ion-label>{{expert.title}}</ion-label>
+                <ion-toggle color="success" [(ngModel)]="expert.status"></ion-toggle>
             </ion-item>
-
             <ion-item-options side="end">
-                <ion-item-option (click)="unread(item)" color="danger">
+                <ion-item-option (click)="remove_expert_in(expert)" color="danger">
                     <ion-icon name="trash"></ion-icon>
                 </ion-item-option>
             </ion-item-options>
         </ion-item-sliding>
-
-        <ion-item-sliding>
-            <ion-item>
-                <ion-label>นายโอ พ่อใหญ่</ion-label>
-                <ion-toggle color="success" [(ngModel)]="status1"> </ion-toggle>
-
-            </ion-item>
-
-            <ion-item-options side="end">
-                <ion-item-option (click)="unread(item)" color="danger">
-                    <ion-icon name="trash"></ion-icon>
-                </ion-item-option>
-            </ion-item-options>
-        </ion-item-sliding>
-        <ion-item-sliding>
-            <ion-item>
-                <ion-label>นาย แดง ไอเหี้ยม</ion-label>
-                <ion-toggle color="success" [(ngModel)]="status2" checked> </ion-toggle>
-
-            </ion-item>
-
-            <ion-item-options side="end">
-                <ion-item-option (click)="unread(item)" color="danger">
-                    <ion-icon name="trash"></ion-icon>
-                </ion-item-option>
-            </ion-item-options>
-        </ion-item-sliding>
-
-
-
 
 
 
