--- a/src/app/major-insert/major-insert.page.html
+++ b/src/app/major-insert/major-insert.page.html
@@ -23,7 +23,7 @@
    
     <ion-item>
       <ion-label>ชื่อด้านการพัฒนา</ion-label>
-      <ion-select interface="action">
+      <ion-select interface="action-sheet">
         <ion-select-option>ด้านวิชาการ</ion-select-option>
         <ion-select-option>ด้านธุรกิจ</ion-select-option>
         <ion-select-option>ด้านวัฒนธรรม</ion-select-option>
@@ -31,6 +31,7 @@
     </ion-item>
 
 <br>
+<!-- test -->
   <!-- <div class="ion-padding">
     <ion-button expand="block" type="submit" class="ion-no-margin" (click)="major_insert()">บันทึก</ion-button>
   </div> -->
