--- a/src/app/skill-insert/skill-insert.page.html
+++ b/src/app/skill-insert/skill-insert.page.html
@@ -3,22 +3,25 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button ion-button (click)="closeModal()">Close</ion-button>
+    </ion-buttons>
     <ion-title>skill-insert</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <form onsubmit="processForm(event)">
+  <form>
     <ion-list lines="full" class="ion-no-margin ion-no-padding">
       <ion-item>
         <ion-label position="stacked">ชื่อทักษะ <ion-text color="danger">*</ion-text>
         </ion-label>
-        <ion-input required type="text"></ion-input>
+        <ion-input required type="text" [(ngModel)]="skill_name" name="skill_name"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">เกรดที่ได้<ion-text color="danger">*</ion-text>
         </ion-label>
-        <ion-input required type="text"></ion-input>
+        <ion-input required type="text" [(ngModel)]="skill_grade" name="skill_grade"></ion-input>
       </ion-item>
     </ion-list>
     <div class="ion-padding">
