--- a/src/app/skill/skill.page.html
+++ b/src/app/skill/skill.page.html
@@ -8,7 +8,8 @@
 </ion-header>
 
 <ion-content>
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" [routerLink]="['/basedata/skill/skill-insert']">
+  <ion-button color="primary" (click)="insert_modal()">Show Modal</ion-button>
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" (click)="insert_modal()">
     <ion-fab-button>
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
