--- a/src/app/basedata/basedata.page.scss
+++ b/src/app/basedata/basedata.page.scss
@@ -11,8 +11,24 @@
   ion-icon{
     margin-left: 30%;
   }
-  
-  
+  #Develops{
+    background: #FFC2C2;
+  }
+  #food{
+  background:#FFECB8;
+  }
+  #place{
+  background: #B7DED2;
+   }
+  #major{
+  background: #90D2D8;
+   }
+   #bank{
+  background: #90D2D8;
+     }
+  #expert{
+  background: #FFC2C2;
+  }
    .card
    {
         max-width: 140px;
@@ -20,7 +36,12 @@
         margin-bottom: -15px !important;
         margin-right: 1px !important;
         margin-left: 1px !important;
-        border-radius: 10px;      
+        border-radius: 10px; 
+        font-family: Kanit;
+        font-weight: bold;
+        font-style: #5E5E5E;
+        
+
    }
   
   //  .ion-card-menu{
