--- a/src/app/develops-insert/develops-insert.page.html
+++ b/src/app/develops-insert/develops-insert.page.html
@@ -21,5 +21,5 @@
     </ion-item>
    
 <br>
-    <ion-button expand="block" color="success" >บันทึก</ion-button>
+    <ion-button expand="block" color="success"(click)="insert_develop()" >บันทึก</ion-button>
 </ion-content>
