--- a/src/app/basedata/basedata.page.html
+++ b/src/app/basedata/basedata.page.html
@@ -1,9 +1,9 @@
-<ion-header>
-  <ion-toolbar>
+<ion-header  >
+  <ion-toolbar >
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>basedata</ion-title>
+    <ion-title>ข้อมูลพื้นฐาน</ion-title>
   </ion-toolbar>
 </ion-header>
 
