--- a/src/app/homes/homes.page.html
+++ b/src/app/homes/homes.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header style="background-color: #273440;">
   <ion-label>
     <ion-toolbar color="dark">
       <!-- <ion-avatar slot="start">
@@ -25,7 +25,7 @@
             </ion-card-title>
           </ion-card-header>
           <ion-card-content class="ion-card-content">
-            <font style="font-size: 19px; margin-left:10%;">basedata</font>
+            <font style="font-size: 15px; margin-left:10%;">ข้อมูลพื้นฐาน</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -37,7 +37,7 @@
             </ion-card-title>
           </ion-card-header>
           <ion-card-content class="ion-card-content">
-            <font style="font-size: 19px;">expert</font>
+            <font style="font-size: 15px; margin-left:20%;">วิทยากร</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -52,7 +52,7 @@
           </ion-card-header>
           <ion-card-content class="ion-card-content">
             <a></a>
-            <font style="font-size: 19px; margin-left:10%;">project</font>
+            <font style="font-size: 15px; margin-left:10%;">โครงการ<br>ฝึกอบรม</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -65,7 +65,7 @@
           </ion-card-header>
           <ion-card-content class="ion-card-content">
             <a></a>
-            <font style="font-size: 19px;">user</font>
+            <font style="font-size: 15px;">ผู้ใช้งาน</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
