--- a/src/app/expert/expert.page.html
+++ b/src/app/expert/expert.page.html
@@ -3,9 +3,11 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>expert<ion-title>
-  </ion-toolbar color="dark">
+    <ion-title>expert</ion-title>
+  </ion-toolbar>
 </ion-header>
+
+
 
 <ion-content>
   <div>
