--- a/src/app/homes/homes.page.scss
+++ b/src/app/homes/homes.page.scss
@@ -14,18 +14,26 @@
   
   #Basedata{
  background: #90D2D8;
+ 
   }
   
 #expert{
   background: #B7DED2;
+  
 }
 #C{
   background: #FFC2C2;
+  
 }
 #D{
   background: #FFECB8;
-}
   
+}
+
+#center{
+text-align: center; 
+
+}
    .card
    {
         max-width: 140px;
