--- a/src/app/place/place.page.html
+++ b/src/app/place/place.page.html
@@ -3,10 +3,32 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>place</ion-title>
+    <ion-title>Place</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content fullscreen>
+  <ion-list>
+
+    <ion-item-sliding *ngFor = "let place of place">
+      <ion-item >
+        <ion-label>{{place.name_eng}}</ion-label>
+        <ion-toggle color="success" [(ngModel)] = "place.status"></ion-toggle>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option color="danger" (click)="remove_place(place)">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+
+
+  </ion-list>
+
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed" [routerLink]="['/place-insert']">
+    <ion-fab-button>
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 
 </ion-content>
