add service bank.service.ts add provider app.module.ts make bank can insert data bank-insert.page.html add http modal bank-insert.page.ts http modal bank-insert/bank-insert.page.html http modal bank-insert/bank-insert.page.ts http modal bank.page.html http modal bank.page.ts http modal bank/bank.page.html http modal bank/bank.page.ts http modal
Signed-off-by: niphitphon8bit <niphitphon_nt@hotmail.com>

--- a/src/app/bank-insert/bank-insert.page.html
+++ b/src/app/bank-insert/bank-insert.page.html
@@ -8,26 +8,29 @@
 </ion-header>
 
 <ion-content>
-  <ion-item>
-    <ion-label>ชื่อบัญชี <ion-text color="danger">*</ion-text></ion-label>
-      <ion-input></ion-input>
-  </ion-item>
+  <form>
+    <ion-item>
+      <ion-label>ชื่อบัญชี <ion-text color="danger">*</ion-text>
+      </ion-label>
+      <ion-input required type="text" [(ngModel)]="balance_name" name="balance_name"></ion-input>
+    </ion-item>
 
-  <ion-item>
-    <ion-label>ชื่อธนาคาร <ion-text color="danger">*</ion-text></ion-label>
-    <ion-select interface="action-sheet">
-      <ion-select-option>ธนาคารกรุงเทพ</ion-select-option>
-      <ion-select-option>ธนาคารกสิกรไทย</ion-select-option>
-      <ion-select-option>ธนาคารไทยพาณิชย์</ion-select-option>
-      <ion-select-option>ธนาคารออมสิน</ion-select-option>
-    </ion-select>
-  </ion-item>
+    <ion-item>
+      <ion-label>ชื่อธนาคาร <ion-text color="danger">*</ion-text>
+      </ion-label>
+      <ion-select interface="action-sheet" [(ngModel)]="name" name="name">
+        <ion-select-option value="ธนาคารกรุงเทพ">ธนาคารกรุงเทพ</ion-select-option>
+        <ion-select-option value="ธนาคารกสิกรไทย">ธนาคารกสิกรไทย</ion-select-option>
+        <ion-select-option value="ธนาคารกสิกรไทย">ธนาคารไทยพาณิชย์</ion-select-option>
+        <ion-select-option value="ธนาคารออมสิน">ธนาคารออมสิน</ion-select-option>
+      </ion-select>
+    </ion-item>
 
-  <ion-item>
-    <ion-label>หมายเหตุ</ion-label>
-    <ion-textarea></ion-textarea>
-  </ion-item>
-
+    <ion-item>
+      <ion-label>หมายเหตุ</ion-label>
+      <ion-textarea [(ngModel)]="text" name="text"></ion-textarea>
+    </ion-item>
+  </form>
   <br>
-  <ion-button expand="block" color="success" (click)="insert_bank()" >บันทึก</ion-button>
+  <ion-button expand="block" type="submit" color="success" (click)="insert_bank()">บันทึก</ion-button>
 </ion-content>
