--- a/src/app/expert/expert.page.html
+++ b/src/app/expert/expert.page.html
@@ -1,10 +1,10 @@
 <ion-header>
-  <ion-toolbar color="dark">
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>expert<ion-title>
-  </ion-toolbar color="dark">
+    <ion-title>expert</ion-title>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
