--- a/src/app/bank/bank.page.html
+++ b/src/app/bank/bank.page.html
@@ -21,7 +21,7 @@
         <ion-toggle color="success" [(ngModel)]="bank.status" (click)="change(bank)"></ion-toggle>
       </ion-item>
       <ion-item-options side="end">
-        <ion-item-option (click)="remove_bank(bank)" color="danger">
+        <ion-item-option (click)="remove_db_bank(bank)" color="danger">
           <ion-icon name="trash"></ion-icon>
         </ion-item-option>
       </ion-item-options>
