แก้ภาษาไทยเป็น english
Signed-off-by: bavza01 <bave12342@gmail.com>

--- a/src/app/basedata/basedata.page.html
+++ b/src/app/basedata/basedata.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>ข้อมูลพื้นฐาน</ion-title>
+    <ion-title>Basedata</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -18,7 +18,7 @@
             </ion-card-title>
           </ion-card-header>
           <ion-card-content class="ion-card-content">
-            <font style="font-size: 10px; margin-left:10%;">ด้านการพัฒนา</font>
+            <font style="font-size: 15px; margin-left:10%;">Develops</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -30,7 +30,7 @@
             </ion-card-title>
           </ion-card-header>
           <ion-card-content class="ion-card-content">
-            <font style="font-size: 10px;">ด้านประเภทอาหาร</font>
+            <font style="font-size: 15px; margin-left:10%;">Food-type</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -45,7 +45,7 @@
           </ion-card-header>
           <ion-card-content class="ion-card-content">
             <a></a>
-            <font style="font-size: 10px; margin-left:10%;">ด้านสถานที่จัดอบรม</font>
+            <font style="font-size: 15px; margin-left:25%;">place</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -58,7 +58,7 @@
           </ion-card-header>
           <ion-card-content class="ion-card-content">
             <a></a>
-            <font style="font-size: 10px;">ด้านสาขาวิชา</font>
+            <font style="font-size: 15px; margin-left:25%;">Major</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -73,7 +73,7 @@
           </ion-card-header>
           <ion-card-content class="ion-card-content">
             <a></a>
-            <font style="font-size: 10px; margin-left:10%;">ด้านบัญชีธนาคาร</font>
+            <font style="font-size: 15px; margin-left:25%;">Bank</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -86,7 +86,7 @@
           </ion-card-header>
           <ion-card-content class="ion-card-content">
             <a></a>
-            <font style="font-size: 10px;">ด้านประเภทวิทยากร</font>
+            <font style="font-size: 15px; margin-left:20%;">Expert</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
