--- a/src/app/develops/develops.page.html
+++ b/src/app/develops/develops.page.html
@@ -3,7 +3,7 @@
       <ion-buttons slot="start">
           <ion-back-button defaultHref="/"></ion-back-button>
         </ion-buttons>
-    <ion-title>ด้านการพัฒนา</ion-title>
+    <ion-title>Develops</ion-title>
   </ion-toolbar>
 </ion-header>
 
