--- a/src/app/homes/homes.page.html
+++ b/src/app/homes/homes.page.html
@@ -25,7 +25,7 @@
             </ion-card-title>
           </ion-card-header>
           <ion-card-content class="ion-card-content">
-            <font style="font-size: 15px; margin-left:10%;">ข้อมูลพื้นฐาน</font>
+            <font style="font-size: 15px; margin-left:10%;">Basedata</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -37,7 +37,7 @@
             </ion-card-title>
           </ion-card-header>
           <ion-card-content class="ion-card-content">
-            <font style="font-size: 15px; margin-left:20%;">วิทยากร</font>
+            <font style="font-size: 15px; margin-left:20%;">Expert</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -52,7 +52,7 @@
           </ion-card-header>
           <ion-card-content class="ion-card-content">
             <a></a>
-            <font style="font-size: 15px; margin-left:10%;">โครงการ<br>ฝึกอบรม</font>
+            <font style="font-size: 15px; margin-left:10%;">Project</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -65,7 +65,7 @@
           </ion-card-header>
           <ion-card-content class="ion-card-content">
             <a></a>
-            <font style="font-size: 15px;">ผู้ใช้งาน</font>
+            <font style="font-size: 15px; margin-left:20%;">User</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
