--- a/src/app/expert/expert.page.html
+++ b/src/app/expert/expert.page.html
@@ -20,7 +20,7 @@
             </ion-card-title>
           </ion-card-header>
           <ion-card-content class="ion-card-content">
-            <font style="font-size: 10px; margin-left:10%;">วิทยากรภายใน</font>
+            <font style="font-size: 15px; margin-left:10%;">Expert-in</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -32,7 +32,7 @@
             </ion-card-title>
           </ion-card-header>
           <ion-card-content class="ion-card-content">
-            <font style="font-size: 10px; margin-left:10%;">วิทยากรภายนอก</font>
+            <font style="font-size: 15px; margin-left:10%;">Expert-out</font>
           </ion-card-content>
         </ion-card>
       </ion-col>
