--- a/src/app/place/place.page.html
+++ b/src/app/place/place.page.html
@@ -8,12 +8,30 @@
 </ion-header>
 
 <ion-content fullscreen>
-  <ion-list>
 
-    <ion-item-sliding *ngFor = "let place of place">
-      <ion-item >
+  <ion-fab vertical="bottom" horizontal="end" slot="fixed"  (click)="insert_place_modal()">
+    <ion-fab-button>
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+  <ion-list>
+    <ion-item-sliding *ngFor="let place of db_places">
+      <ion-item>
+        <ion-label>{{place.place_name_en}}</ion-label>
+        <ion-toggle color="success" [(ngModel)]="place.status" (click)="change(place)"></ion-toggle>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option (click)="remove_db_place(place)" color="danger">
+          <ion-icon name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+
+    <ion-item-sliding *ngFor="let place of place">
+      <ion-item>
         <ion-label>{{place.name_eng}}</ion-label>
-        <ion-toggle color="success" [(ngModel)] = "place.status"></ion-toggle>
+        <ion-toggle color="success" [(ngModel)]="place.status"></ion-toggle>
       </ion-item>
       <ion-item-options side="end">
         <ion-item-option color="danger" (click)="remove_place(place)">
@@ -21,14 +39,6 @@
         </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
-
-
   </ion-list>
-
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed" [routerLink]="['/place-insert']">
-    <ion-fab-button>
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
 
 </ion-content>
