icon ionic basedata.page.html and scss all Signed-off-by: bavza01 <bave12342@gmail.com>

--- a/src/app/basedata/basedata.page.html
+++ b/src/app/basedata/basedata.page.html
@@ -14,7 +14,7 @@
         <ion-card class="card" [routerLink]="['/basedata/develops']"routerLinkActive="router-link-active" id="Develops">
           <ion-card-header>
             <ion-card-title>
-              <ion-icon size="large" ios="ios-document" md="md-document"></ion-icon>
+              <ion-icon size="large"  name="construct"></ion-icon> 
             </ion-card-title>
           </ion-card-header>
           <ion-card-content class="ion-card-content">
@@ -26,7 +26,7 @@
         <ion-card class="card" [routerLink]="['/basedata/food-type']" routerLinkActive="router-link-active"id="food">
           <ion-card-header>
             <ion-card-title>
-              <ion-icon size="large" ios="ios-person" md="md-person"></ion-icon>
+              <ion-icon size="large"  name="pizza"></ion-icon>
             </ion-card-title>
           </ion-card-header>
           <ion-card-content class="ion-card-content">
@@ -40,12 +40,12 @@
         <ion-card class="card" [routerLink]="['/basedata/place']" routerLinkActive="router-link-active"id="place">
           <ion-card-header>
             <ion-card-title>
-              <ion-icon size="large" ios="ios-person" md="md-person"></ion-icon>
+              <ion-icon size="large"  name="pin"></ion-icon>
             </ion-card-title>
           </ion-card-header>
           <ion-card-content class="ion-card-content">
             <a></a>
-            <font style="font-size: 15px; margin-left:25%;">place</font>
+            <font style="font-size: 15px; margin-left:25%;">place</font>  
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -53,12 +53,12 @@
         <ion-card class="card" [routerLink]="['/basedata/major']" routerLinkActive="router-link-active"id="major">
           <ion-card-header>
             <ion-card-title>
-              <ion-icon size="large" ios="ios-person" md="md-person"></ion-icon>
+              <ion-icon size="large"  name="trophy"></ion-icon>
             </ion-card-title>
           </ion-card-header>
           <ion-card-content class="ion-card-content">
             <a></a>
-            <font style="font-size: 15px; margin-left:25%;">Major</font>
+            <font style="font-size: 15px; margin-left:25%;">Major</font>   
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -68,10 +68,10 @@
         <ion-card class="card" [routerLink]="['/basedata/bank']" routerLinkActive="router-link-active"id="bank">
           <ion-card-header>
             <ion-card-title>
-              <ion-icon size="large" ios="ios-person" md="md-person"></ion-icon>
+              <ion-icon size="large"  name="cash"></ion-icon>
             </ion-card-title>
           </ion-card-header>
-          <ion-card-content class="ion-card-content">
+          <ion-card-content class="ion-card-content"> 
             <a></a>
             <font style="font-size: 15px; margin-left:25%;">Bank</font>
           </ion-card-content>
