--- a/src/app/basedata/basedata.page.scss
+++ b/src/app/basedata/basedata.page.scss
@@ -40,9 +40,11 @@
         border-radius: 10px; 
         font-family: Kanit;
         font-weight: bold;
-        font-style: #5E5E5E;
-        
+        font-style: #5E5E5E;   
+   }
 
+   *{
+    font-family: Kanit;
    }
   
   //  .ion-card-menu{
