--- a/src/app/homes/homes.page.html
+++ b/src/app/homes/homes.page.html
@@ -33,11 +33,11 @@
         <ion-card class="card" [routerLink]="['/expert']" routerLinkActive="router-link-active" id="expert">
           <ion-card-header>
             <ion-card-title>
-              <ion-icon size="large" ios="ios-person" md="md-person"></ion-icon>
+              <ion-icon size="large" ios="ios-people" name="people"></ion-icon>
             </ion-card-title>
           </ion-card-header>
           <ion-card-content class="ion-card-content">
-            <font style="font-size: 15px; margin-left:20%;">Expert</font>
+            <font style="font-size: 15px; margin-left:20%;">Expert</font>   
           </ion-card-content>
         </ion-card>
       </ion-col>
@@ -60,10 +60,10 @@
         <ion-card class="card" [routerLink]="['/user']" routerLinkActive="router-link-active"id="D">
           <ion-card-header>
             <ion-card-title>
-              <ion-icon size="large" ios="ios-person" md="md-person"></ion-icon>
+              <ion-icon size="large" name="person"></ion-icon>
             </ion-card-title>
           </ion-card-header>
-          <ion-card-content class="ion-card-content">
+          <ion-card-content class="ion-card-content">      
             <a></a>
             <font style="font-size: 15px; margin-left:20%;">User</font>
           </ion-card-content>
