--- a/src/app/homes/homes.page.scss
+++ b/src/app/homes/homes.page.scss
@@ -47,6 +47,10 @@ text-align: center;
         font-style: #5E5E5E;
         
    }
+
+   *{
+    font-family: Kanit;
+   }
   
   //  .ion-card-menu{
   //    height: 20vh;
