--- a/src/app/bank-insert/bank-insert.page.html
+++ b/src/app/bank-insert/bank-insert.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
+      <ion-back-button defaultHref="/basedata/bank" (click)="closeModal()"></ion-back-button>
     </ion-buttons>
     <ion-title>เพิ่มข้อมูลธนาคารที่เปิดบัญชี</ion-title>
   </ion-toolbar>
